# mailing_service

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  mailing_sent.html  models.py  urls.py  views.py
mailings/management/: __init__.py
mailings/management/commands/: __init__.py  send_pending_mailings.py  send_scheduled_mailings.py
mailings/migrations/: 0001_initial.py
mailings/templates/mailings/: dashboard.html  mailing_sent.html
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
