[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["ildar_safarov <ildarsafarov555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.3"
python-dotenv = "^1.2.2"
pillow = "^12.1.1"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^8.0.1"
flake8 = "^7.3.0"
pytest = "^9.0.2"
pytest-django = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
